tests/positive/pr118c_binary_param_return.safe
package pr118c_binary_param_return

   function bump (value : binary (8)) returns binary (8)
      return value + binary (8) (1)
